--- a/form/Menu.html
+++ b/form/Menu.html
@@ -2,7 +2,7 @@
 
 <div class="title">
     <table>
-        <th><img src="JL.png"></th>
+        <th><img src="img/JL.png" alt="AR Justice Logo"></th>
         <th><h1 style="font-size: 50px; padding-left: 50px;">Court Management System</h1></th>
     </table>
 </div>
